--- a/Correo/correo.html
+++ b/Correo/correo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html>
 <head>
 	<title>Gestión de correo</title>
@@ -41,8 +41,8 @@
 									<td>
 										TCS
 										<br>
-										<input type="checkbox" name="correo1" value="ericka.montero@tcs.com.ve" checked>Ericka Montero <br>
-										<input type="checkbox" name="correo2" value="jacqueline.gomez@tcs.com.vee">Jacqueline Gomez <br>
+										<input type="checkbox" name="correo1" value="ericka.montero@tcs.com.ve" >Ericka Montero <br>
+										<input type="checkbox" name="correo2" value="jacqueline.gomez@tcs.com.ve">Jacqueline Gomez <br>
 									</td>
 									<td>Telefonica
 										<br>
@@ -61,29 +61,29 @@
 							<tbody>
 								<tr>
 									<td>Nombre ruta de la Entrega / Change Request </td>
-									<td><input type="text" name="change"></td>
+									<td><input type="text" id="change"></td>
 								</tr>
 								<tr>
 									<td>Número de la entrega:</td>	
-									<td><input type="text" name="entrega"></td>
+									<td><input type="text" id="entrega"></td>
 								</tr>
 								<tr>
 									<td>Nº de requerimiento / Caso HD / Nº de Proyecto :</td>
-									<td><input type="text" name="nombreProyecto"></td>
+									<td><input type="text" id="nombreProyecto"></td>
 								</tr>
 							</tbody>
 						</table>	
 					</td>
 				</tr>
 			</tbody>
-			<button type="submit">Generar cabecera de correo</button>
-			<section id='cabeceraCorreo'>
-				<p id='para'></p>
-				<p id='conCopia'></p>
-				<p id='asuntoCorreo'></p>
-				<div></div>
-			</section>
 		</table>
+		<button id='generarCabecera' type="submit">Generar cabecera de correo</button>
+		<section id='cabeceraCorreo'>
+			<p id='para'></p>
+			<p id='conCopia'></p>
+			<p id='asuntoCorreo'></p>
+			<div></div>
+		</section>
 	</aside>
 
 
